# LangChain-XGuard

./: .coverage  .gitignore  README.md  README_ZH.md  pyproject.toml
examples/: 01_customer_service_bot.py  02_yufeng_xguard_demo.py  xguard_policy.yaml
src/langchain_xguard/: __init__.py  client.py  middleware.py  models.py  policy.py
src/langchain_xguard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_xguard.py
