[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-xguard"
version = "0.1.0"
description = "LangChain/LlamaIndex native security middleware with streaming safety interception and policy-as-code"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "XGuard Team", email = "xguard@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: LangChain",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["langchain", "security", "ai-safety", "middleware", "llm", "guardrails"]
requires-python = ">=3.9"
dependencies = [
    "langchain-core>=0.2.0",
    "langchain>=0.1.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "opentelemetry-api>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
examples = [
    "langchain-openai>=0.1.0",
    "langchain-community>=0.0.10",
]

[project.urls]
Homepage = "https://github.com/xguard/langchain-xguard"
Documentation = "https://langchain-xguard.readthedocs.io"
Repository = "https://github.com/xguard/langchain-xguard"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=langchain_xguard --cov-report=term-missing"
